# NRTS

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs
core/: Cargo.toml
core/src/: core.rs  lib.rs  movement.rs  network.rs
core/src/models/: geometry.rs  message.rs  mod.rs  player.rs
server/: Cargo.toml
server/src/: main.rs
src/: geometry.rs  lib.rs  main.rs  message.rs
