[workspace]
resolver = "2" # Important! wgpu/Bevy needs this! https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html#details
members = ["core", "server", "client"]


# Compile all the *dependencies* in optimized release mode even if `--release` is not passed in
[profile.dev]
opt-level = 3
debug = false

# But compile the project itself in debug mode if `--release` is not passed in

[profile.dev.package."*"]
opt-level = 0
debug = true
