[package]
name = "nrts-core"
version = "0.1.0"
authors = ["Jiangkun QIU <qjk2001@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "0.9.2"
bytes = { version = "1", features = ["serde"] }